--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.16.2",
     "lazy-load-component": "^1.1.5",
     "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router": "^5.0.0",
