--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:2000",
   "dependencies": {
     "antd": "^3.16.2",
+    "axios": "^0.18.0",
     "lazy-load-component": "^1.1.5",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router": "^5.0.0",
